// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-transformer-sqip generateSqip cached 1`] = `
Object {
  "content": "<svg><!-- Cached SVG --></svg>",
  "metadata": Object {
    "dataURI": "data:image/svg+xml,dataURI",
  },
}
`;

exports[`gatsby-transformer-sqip generateSqip not cached 1`] = `
Object {
  "content": "<svg><!-- Mocked SQIP SVG --></svg>",
  "dataURI": "data:image/svg+xml,dataURI",
  "metadata": Object {},
}
`;

exports[`gatsby-transformer-sqip generateSqip not cached 2`] = `
Object {
  "plugins": Array [
    Object {
      "name": "sqip-plugin-primitive",
      "options": Object {
        "mode": 3,
        "numberOfPrimitives": 5,
      },
    },
    "sqip-plugin-data-uri",
    "sqip-plugin-svgo",
  ],
}
`;
